--- a/tools/preprocessing/data_load.ipynb
+++ b/tools/preprocessing/data_load.ipynb
@@ -1,6 +1,297 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0b513924",
+   "metadata": {},
+   "source": [
+    "## Dataset preparation CholecT50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "72aff9a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_videos_with_overlapping_actions(data):\n",
+    "    annotations = data.get('annotations', {})\n",
+    "    for frame_id, instances in annotations.items():\n",
+    "        # Count only valid instances (triplet ID is not -1)\n",
+    "        valid_instances = [inst for inst in instances if inst[0] not in [-1,]]\n",
+    "        if len(valid_instances) > 1:\n",
+    "            print(\"valid_instances\", valid_instances)\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "def find_videos_with_chiral_actions(data, chirality_map):\n",
+    "    # Create a set of all verb IDs that are part of a chiral pair for quick lookup.\n",
+    "    chiral_verb_ids = set(chirality_map.keys()) | set(chirality_map.values())\n",
+    "\n",
+    "    annotations = data.get('annotations', {})\n",
+    "    for frame_id, instances in annotations.items():\n",
+    "        for instance in instances:\n",
+    "            # Verb ID is the 8th item (index 7) in the instance vector.\n",
+    "            verb_id = str(instance[7])\n",
+    "            if verb_id in chiral_verb_ids:\n",
+    "                print(\"verb_id\",verb_id)\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "def find_videos_with_bounding_boxes(data):\n",
+    "    annotations = data.get('annotations', {})\n",
+    "    for frame_id, instances in annotations.items():\n",
+    "        for instance in instances:\n",
+    "            # A triplet instance is a vector of 15 items.\n",
+    "            # BBox for instrument: indices 3, 4, 5, 6 (x, y, w, h)\n",
+    "            # BBox for target: indices 10, 11, 12, 13 (x, y, w, h)\n",
+    "            instrument_bbox_coords = instance[3:7]\n",
+    "            target_bbox_coords = instance[10:14]\n",
+    "\n",
+    "            # The value is -1.0 for null/absence. Check if any value is not -1.0.\n",
+    "            if any(coord != -1.0 for coord in instrument_bbox_coords):\n",
+    "                print(\"instrument_bbox_coords\",instrument_bbox_coords)\n",
+    "                return True\n",
+    "            if any(coord != -1.0 for coord in target_bbox_coords):\n",
+    "                print(\"target_bbox_coords\",target_bbox_coords)\n",
+    "                return True\n",
+    "    return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82155832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file VID01.json with video ID: 1\n",
+      "valid_instances [[7, 0, 1, -1, -1, -1, -1, 0, 0, 1, -1, -1, -1, -1, 0], [96, 2, 1, -1, -1, -1, -1, 9, 14, 1, -1, -1, -1, -1, 0]]\n",
+      "verb_id 0\n",
+      "Processing file VID02.json with video ID: 2\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [44, 1, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [88, 5, 1.0, -1.0, -1.0, -1.0, -1.0, 7, 7, 1.0, -1.0, -1.0, -1.0, -1.0, 5]]\n",
+      "verb_id 5\n",
+      "Processing file VID04.json with video ID: 4\n",
+      "valid_instances [[7, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0], [17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0]]\n",
+      "verb_id 0\n",
+      "Processing file VID05.json with video ID: 5\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [96, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID06.json with video ID: 6\n",
+      "valid_instances [[92, 5, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [94, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 5]]\n",
+      "verb_id 4\n",
+      "Processing file VID08.json with video ID: 8\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID10.json with video ID: 10\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID103.json with video ID: 103\n",
+      "valid_instances [[7, 0, 1.0, -1, -1, -1, -1, 0, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [17, 0, 1.0, -1, -1, -1, -1, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID110.json with video ID: 110\n",
+      "valid_instances [[7, 0, 1, -1, -1, -1, -1, 0, 0, 1, -1, -1, -1, -1, 0], [94, 0, 1, -1, -1, -1, -1, 9, 14, 1, -1, -1, -1, -1, 0]]\n",
+      "verb_id 0\n",
+      "Processing file VID111.json with video ID: 111\n",
+      "valid_instances [[19, 0, 1.0, -1, -1, -1, -1, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1, -1, -1, -1, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID12.json with video ID: 12\n",
+      "valid_instances [[7, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [96, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID13.json with video ID: 13\n",
+      "valid_instances [[7, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [96, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID14.json with video ID: 14\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID15.json with video ID: 15\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID18.json with video ID: 18\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [58, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID22.json with video ID: 22\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID23.json with video ID: 23\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID25.json with video ID: 25\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [29, 1, 1.0, -1.0, -1.0, -1.0, -1.0, 3, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5]]\n",
+      "verb_id 0\n",
+      "Processing file VID26.json with video ID: 26\n",
+      "valid_instances [[20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID27.json with video ID: 27\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 4\n",
+      "Processing file VID29.json with video ID: 29\n",
+      "valid_instances [[20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [82, 5, 1.0, -1.0, -1.0, -1.0, -1.0, 6, 6, 1.0, -1.0, -1.0, -1.0, -1.0, 5]]\n",
+      "verb_id 4\n",
+      "Processing file VID31.json with video ID: 31\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [61, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID32.json with video ID: 32\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [61, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID35.json with video ID: 35\n",
+      "valid_instances [[14, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [58, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID36.json with video ID: 36\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID40.json with video ID: 40\n",
+      "valid_instances [[1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 4\n",
+      "Processing file VID42.json with video ID: 42\n",
+      "valid_instances [[20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [61, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID43.json with video ID: 43\n",
+      "valid_instances [[19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5], [29, 1, 1.0, -1.0, -1.0, -1.0, -1.0, 3, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 5]]\n",
+      "verb_id 4\n",
+      "Processing file VID47.json with video ID: 47\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [59, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 1, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID48.json with video ID: 48\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [61, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID49.json with video ID: 49\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID50.json with video ID: 50\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID51.json with video ID: 51\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [96, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID52.json with video ID: 52\n",
+      "valid_instances [[6, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 0, 1, 1.0, -1.0, -1.0, -1.0, -1.0, 2], [98, 4, 1.0, -1.0, -1.0, -1.0, -1.0, 9, 14, 1.0, -1.0, -1.0, -1.0, -1.0, 2]]\n",
+      "verb_id 0\n",
+      "Processing file VID56.json with video ID: 56\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID57.json with video ID: 57\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID60.json with video ID: 60\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 2], [68, 3, 1.0, -1.0, -1.0, -1.0, -1.0, 5, 3, 1.0, -1.0, -1.0, -1.0, -1.0, 2]]\n",
+      "verb_id 5\n",
+      "Processing file VID62.json with video ID: 62\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [58, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID65.json with video ID: 65\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID66.json with video ID: 66\n",
+      "valid_instances [[20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [61, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 4\n",
+      "Processing file VID68.json with video ID: 68\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 4\n",
+      "Processing file VID70.json with video ID: 70\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID73.json with video ID: 73\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [58, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID74.json with video ID: 74\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID75.json with video ID: 75\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [51, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 3, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID78.json with video ID: 78\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [58, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 5\n",
+      "Processing file VID79.json with video ID: 79\n",
+      "valid_instances [[17, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [19, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 8, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "Processing file VID80.json with video ID: 80\n",
+      "valid_instances [[20, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1, 10, 1.0, -1.0, -1.0, -1.0, -1.0, 1], [60, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 2, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID92.json with video ID: 92\n",
+      "valid_instances [[94, 0, 1, -1, -1, -1, -1, 9, 14, 1, -1, -1, -1, -1, 1], [94, 0, 1, -1, -1, -1, -1, 9, 14, 1, -1, -1, -1, -1, 1]]\n",
+      "verb_id 0\n",
+      "Processing file VID96.json with video ID: 96\n",
+      "valid_instances [[7, 0, 1.0, -1, -1, -1, -1, 0, 0, 1.0, -1.0, -1.0, -1.0, -1.0, 3], [69, 3, 1.0, -1, -1, -1, -1, 5, 2, 1.0, -1.0, -1.0, -1.0, -1.0, 3]]\n",
+      "verb_id 0\n",
+      "--- Surgical Video Annotation Analysis Report ---\n",
+      "\n",
+      "Videos with Bounding Boxes: []\n",
+      "Total: 0\n",
+      "\n",
+      "Videos with Overlapping Actions: [1, 2, 4, 5, 6, 8, 10, 12, 13, 14, 15, 18, 22, 23, 25, 26, 27, 29, 31, 32, 35, 36, 40, 42, 43, 47, 48, 49, 50, 51, 52, 56, 57, 60, 62, 65, 66, 68, 70, 73, 74, 75, 78, 79, 80, 92, 96, 103, 110, 111]\n",
+      "Total: 50\n",
+      "\n",
+      "Videos with Chiral Actions: [1, 2, 4, 5, 6, 8, 10, 12, 13, 14, 15, 18, 22, 23, 25, 26, 27, 29, 31, 32, 35, 36, 40, 42, 43, 47, 48, 49, 50, 51, 52, 56, 57, 60, 62, 65, 66, 68, 70, 73, 74, 75, 78, 79, 80, 92, 96, 103, 110, 111]\n",
+      "Total: 50\n",
+      "\n",
+      "-------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import json\n",
+    "from collections import defaultdict, Counter\n",
+    "from dataset_mapping import *\n",
+    "from cholect50 import find_videos_with_overlapping_actions, find_videos_with_chiral_actions, find_videos_with_bounding_boxes, \n",
+    "\n",
+    "DATA_DIRECTORY = r\"C:\\Users\\rezow\\Rezowan\\Datasets\\CholecT50\\labels\"\n",
+    "json_dir = DATA_DIRECTORY\n",
+    "if not os.path.exists(json_dir):\n",
+    "    print(f\"Directory not found: {json_dir}\")\n",
+    "\n",
+    "    # Lists to store the video IDs based on findings\n",
+    "videos_with_bboxes = []\n",
+    "videos_with_overlaps = []\n",
+    "videos_with_chirality = []\n",
+    "    # find_all_cooccurring_triplets(json_dir)\n",
+    "    # create_consolidated_sequence_file(DATA_DIRECTORY, CONSOLIDATED_OUTPUT_FILE)\n",
+    "\n",
+    "# Iterate over each file in the specified directory\n",
+    "for filename in os.listdir(json_dir):\n",
+    "    if filename.endswith('.json'):\n",
+    "        filepath = os.path.join(json_dir, filename)\n",
+    "        try:\n",
+    "            with open(filepath, 'r') as f:\n",
+    "                video_data = json.load(f)\n",
+    "\n",
+    "            video_id = video_data.get('video', filename)\n",
+    "            print(f\"Processing file {filename} with video ID: {video_id}\")\n",
+    "            # Run each analysis function\n",
+    "            if find_videos_with_bounding_boxes(video_data):\n",
+    "                videos_with_bboxes.append(video_id)\n",
+    "\n",
+    "            if find_videos_with_overlapping_actions(video_data):\n",
+    "                videos_with_overlaps.append(video_id)\n",
+    "\n",
+    "            if find_videos_with_chiral_actions(video_data, chirality_verb_pairs):\n",
+    "                videos_with_chirality.append(video_id)\n",
+    "            # most_common_pairs = find_cooccurring_triplets(DUMMY_DATA_DIR, top_n=10)\n",
+    "            # print(\"most_common_pairs\",most_common_pairs)\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Could not process file {filename}: {e}\")\n",
+    "\n",
+    "# --- Print the Final Report ---\n",
+    "print(\"--- Surgical Video Annotation Analysis Report ---\")\n",
+    "print(f\"\\nVideos with Bounding Boxes: {sorted(videos_with_bboxes)}\")\n",
+    "print(f\"Total: {len(videos_with_bboxes)}\")\n",
+    "\n",
+    "print(f\"\\nVideos with Overlapping Actions: {sorted(videos_with_overlaps)}\")\n",
+    "print(f\"Total: {len(videos_with_overlaps)}\")\n",
+    "\n",
+    "print(f\"\\nVideos with Chiral Actions: {sorted(videos_with_chirality)}\")\n",
+    "print(f\"Total: {len(videos_with_chirality)}\")\n",
+    "print(\"\\n-------------------------------------------------\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c07518e5",
